# Signal_client-fork

./: .gitignore  README.md
signal_client/: Cargo.toml
signal_client/src/: cli.rs  main.rs
signal_client/src/functions/: accounts.rs  contacts.rs  group.rs  messages.rs  mod.rs  paths.rs  received.rs  sending.rs  ui.rs
