[package]
name = "signal_client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek', branch = 'main' }
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0"
futures = "0.3.30"
url = "2.5.0"
qrcode = "0.13"
image = "0.24.9"
qrcodegen = "1.6.0"
chrono = "0.4.38"


[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.1' }

