[package]
name = "signal_client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sled = { git = "https://github.com/whisperfish/presage" }
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0"
futures = "0.3.30"
qrcodegen = "1.8.0"
chrono = "0.4.38"
ratatui = "0.26.3"
crossterm = "0.27.0"
tui = "0.19.0"
tui-input = "0.8.0"
unicode-width = "0.1.10"
lazy_static = "1.4"
url = "2.5.0"
qrcode = "0.13"
image = "0.24.9"
colored = "2.0"
time = "0.3.36"
log = "0.4.21"


[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

